tests/neg-custom-args/captures/lazylists-exceptions.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists-exceptions.scala:37:4 --------------------------
37 |    tabulate(10) { i => // error
   |    ^
   |    Found:    LazyList[Int]^
   |    Required: LazyList[Int]^?
   |
   |    Note that reference (cap : caps.Root), defined at level 2
   |    cannot be included in outer capture set ?, defined at level 1 in method problem
38 |      if i > 9 then throw Ex1()
39 |      i * i
40 |    }
   |
   | longer explanation available when compiling with `-explain`
